--- a/at/map.jinja
+++ b/at/map.jinja
@@ -2,11 +2,11 @@
 # vim: ft=jinja
 
 {% set os_family_map = salt['grains.filter_by']({
-    'RedHat': {
+    'default': {
       'pkg': 'at',
       'service': 'atd',
     },
-  }, grain='os_family', merge=salt['pillar.get']('at:lookup')) %}
+  }, grain='os_family', default='default', merge=salt['pillar.get']('at:lookup')) %}
 
 {% set at_settings = salt['pillar.get'](
     'at',
